obrigatorio nome do projeto

--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "sails-mui",
-  "version": "1.0.0",
+  "version": "1.0.5",
   "description": "",
   "bin": "index.js",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https:///github.com/Advansoftware/SailsMui.git"
   },
   "dependencies": {
     "colors": "^1.4.0",
