--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sails-mui",
-  "version": "1.0.5",
+  "name": "sails-front",
+  "version": "0.0.2",
   "description": "",
   "bin": "index.js",
   "main": "index.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https:///github.com/Advansoftware/SailsMui.git"
+    "url": "https:///github.com/Advansoftware/SailsMui.git"
   },
   "dependencies": {
     "colors": "^1.4.0",
